Criando record para alteração dos dados e criando corpo de response para artista e musica

--- a/ScreenSound.API/ScreenSound.API.csproj
+++ b/ScreenSound.API/ScreenSound.API.csproj
@@ -16,5 +16,8 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Response\" />
+	</ItemGroup>
 
 </Project>
