--- a/ScreenSound.API/appsettings.json
+++ b/ScreenSound.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ScreenSoundDB": "Server=tcp:screensoundserver3.database.windows.net,1433;Initial Catalog=ScreenSoundV3;Persist Security Info=False;User ID=guilherme;Password=Cachorro!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
